.provarCaches/00D5f000005vwGkEAI/objects/rstk__iccontainer__c.object
<CustomObject>
    <description>iccontainer__c</description>
    <fields>
        <fullName>rstk__altextid__c</fullName>
        <externalId>true</externalId>
        <label>altextid</label>
        <length>20</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>rstk__formula_name__c</fullName>
        <formula>rstk__iccontainer_prefix__c +  rstk__iccontainer_id__c</formula>
        <inlineHelpText>Internal formula for constructing the associated name field.</inlineHelpText>
        <label>Formula Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__formula_searchindex__c</fullName>
        <formula>Name</formula>
        <inlineHelpText>This is an internal system field used to define the searchindex of a record and is not displayed in the User interface.</inlineHelpText>
        <label>Formula Search Index</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__iccontainer_childsplit__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>When checked, this Inventory Container has been used for a Split Receipt process, as a child Inventory Container.</inlineHelpText>
        <label>Child-Receipt Container</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstk__iccontainer_comments__c</fullName>
        <inlineHelpText>Free text field to record comments about this Inventory Container.</inlineHelpText>
        <label>Container Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>rstk__iccontainer_continfostring__c</fullName>
        <formula>rstk__iccontainer_id__c +
IF(OR(rstk__iccontainer_itemreqd__c=true,rstk__iccontainer_projreqd__c = true,rstk__iccontainer_sitereqd__c = true,rstk__iccontainer_locidreqd__c = true, rstk__iccontainer_locnumreqd__c = true), &apos; |&apos;,&apos;&apos;)+
IF( rstk__iccontainer_itemreqd__c = true, &apos; Item: &apos; + rstk__iccontainer_icitem__r.rstk__icitem_item__r.rstk__peitem_item__c + &apos; | &apos;,&apos;&apos;) + 
IF( rstk__iccontainer_projreqd__c = true, &apos; Proj: &apos; + rstk__iccontainer_pjproj__r.Name + &apos; | &apos;,&apos;&apos;) +
IF( rstk__iccontainer_sitereqd__c = true, &apos; Site: &apos; + rstk__iccontainer_site__r.rstk__sysite_site__c  + &apos; | &apos;,&apos;&apos;) +
IF( rstk__iccontainer_locidreqd__c = true, &apos; LocId: &apos; + rstk__iccontainer_locid__r.rstk__sylocid_locid__c + &apos; | &apos;,&apos;&apos;) +
IF( rstk__iccontainer_locnumreqd__c = true, &apos; LocNum: &apos; + rstk__iccontainer_locnum__c ,&apos;&apos;)</formula>
        <inlineHelpText>String with Inventory Container setup details, used on flows dropdown labels and selection queries.</inlineHelpText>
        <label>Container Information Display</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__iccontainer_discarded__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>When checked, the Inventory Container is inactive and not usable.</inlineHelpText>
        <label>Container is Discarded (Unusable)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstk__iccontainer_div__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Identifies the specific Division that this Inventory Container is associated with.</inlineHelpText>
        <label>Division</label>
        <referenceTo>rstk__sydiv__c</referenceTo>
        <relationshipLabel>Inventory Containers</relationshipLabel>
        <relationshipName>iccontainers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__iccontainer_earliestexpdate__c</fullName>
        <inlineHelpText>System assigned date of the earliest Expiration Date for Lot Controlled Items (Inventory by Locations) stored in this Inventory Container.</inlineHelpText>
        <label>Earliest Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>rstk__iccontainer_icconclass__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Identifies the Inventory Container Class used to create &amp; default values on this Inventory Container. If Contents are used in Sales Fulfillment and a new SO Container is created, SO Container type will be derived from this Inventory Container Class.</inlineHelpText>
        <label>Container Class</label>
        <referenceTo>rstk__icconclass__c</referenceTo>
        <relationshipLabel>Inventory Containers</relationshipLabel>
        <relationshipName>iccontainers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__iccontainer_iccontainer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>The Parent Inventory Container of this Inventory Container.</inlineHelpText>
        <label>Parent Container</label>
        <referenceTo>rstk__iccontainer__c</referenceTo>
        <relationshipLabel>Child Containers</relationshipLabel>
        <relationshipName>iccontainers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__iccontainer_icitem__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>The Inventory Item that is being stored in this Inventory Container. Mandatory if &apos;Container is Item Specific&apos; is checked. Values entered are information and used as defaults for transaction processing.</inlineHelpText>
        <label>Inventory Item</label>
        <lookupFilter>
            <active>false</active>
            <filterItems>
                <field>rstk__icitem__c.rstk__icitem_div__c</field>
                <operation>equals</operation>
                <valueField>$Source.rstk__iccontainer_div__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>rstk__icitem__c</referenceTo>
        <relationshipLabel>Inventory Containers</relationshipLabel>
        <relationshipName>iccontainers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__iccontainer_id__c</fullName>
        <externalId>true</externalId>
        <inlineHelpText>System generated number to uniquely identify this Inventory Container.</inlineHelpText>
        <label>Inventory Container ID / LPN</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>rstk__iccontainer_idsydata__c</fullName>
        <formula>VALUE(rstk__iccontainer_id__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Number value for unique auto-number &apos;Inventory Container ID&apos;, to be used on SYDATA references.</inlineHelpText>
        <label>Inventory Container ID - SYDATA ref</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__iccontainer_itemreqd__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>When checked, the Inventory Container is specific to the Item defined in the Inventory Item field.</inlineHelpText>
        <label>Container is Item Specific</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstk__iccontainer_locid__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>The Location ID for all Items stored in this Inventory Container. Mandatory if &apos;Container is Location ID Specific&apos; is checked. Values entered are information and used as defaults for transaction processing.</inlineHelpText>
        <label>Location ID</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>Location ID Division must match Division</errorMessage>
            <filterItems>
                <field>rstk__sylocid__c.rstk__sylocid_div__c</field>
                <operation>equals</operation>
                <valueField>$Source.rstk__iccontainer_div__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>rstk__sylocid__c</referenceTo>
        <relationshipLabel>Inventory Containers</relationshipLabel>
        <relationshipName>iccontainers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__iccontainer_locidreqd__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>When checked, the Inventory Container is specific to the Location ID defined in the Location ID field.</inlineHelpText>
        <label>Container is Location ID Specific</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstk__iccontainer_locnum__c</fullName>
        <inlineHelpText>The Location Number for all items being stored in this Inventory Container. Mandatory if &apos;Container is Location Number Specific&apos; is checked. Values entered are information and used as defaults for transaction processing.</inlineHelpText>
        <label>Location Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__iccontainer_locnumreqd__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>When checked, the Inventory Container is specific to the Location Number defined in the Location Number field.</inlineHelpText>
        <label>Container is Location Number Specific</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstk__iccontainer_lotno__c</fullName>
        <label>Lot Number</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__iccontainer_lpn__c</fullName>
        <inlineHelpText>License Plate ID (Unique Identifier) assigned to this Inventory Container. User defined and up to 80 characters in length.</inlineHelpText>
        <label>License Plate ID</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__iccontainer_lpnorderdate__c</fullName>
        <formula>rstk__iccontainer_prefix__c + rstk__iccontainer_orderno__c + &apos;_&apos;+ TEXT(DATEVALUE(CreatedDate)) + &apos;_&apos; +  rstk__iccontainer_id__c</formula>
        <inlineHelpText>String concatenation of Prefix, Order number, Date and LPN ID.</inlineHelpText>
        <label>Order, Date &amp; LPN</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__iccontainer_maxweight__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>User may enter a Max Weight for this Inventory Container, and define any validation rules or logic in order to enforce it.</inlineHelpText>
        <label>Max Weight</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__iccontainer_ncontents__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Number of Inventory by Location records with Quantity &gt; 0 linked to this Inventory Container.</inlineHelpText>
        <label>Number of linked contents</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__iccontainer_orderno__c</fullName>
        <inlineHelpText>Purchase Order or Work Order number that generated this Inventory Container.</inlineHelpText>
        <label>Originating Order Number</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__iccontainer_origpoline__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>The PO Line Receipt that created this Inventory Container.</inlineHelpText>
        <label>Created from Purchase Order Line</label>
        <referenceTo>rstk__poline__c</referenceTo>
        <relationshipLabel>Inventory Containers</relationshipLabel>
        <relationshipName>Inventory_Containers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__iccontainer_origwo__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>The Work Order that created this Container.</inlineHelpText>
        <label>Created from Work Order</label>
        <referenceTo>rstk__wocst__c</referenceTo>
        <relationshipLabel>Inventory Containers</relationshipLabel>
        <relationshipName>Inventory_Containers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__iccontainer_parentlpn__c</fullName>
        <formula>rstk__iccontainer_iccontainer__r.rstk__iccontainer_id__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Parent Container ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__iccontainer_parentsplit__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>When checked, this Inventory Container has been used for a Split Receipt process.</inlineHelpText>
        <label>Split-Receipt Parent Container</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstk__iccontainer_pjproj__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>The Project for all Items being stored in this Inventory Container. Mandatory if &apos;Container is Project Specific&apos; is checked. Values entered are information and used as defaults for transaction processing.</inlineHelpText>
        <label>Project</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>Project Division must match Division</errorMessage>
            <filterItems>
                <field>rstk__pjproj__c.rstk__pjproj_div__c</field>
                <operation>equals</operation>
                <valueField>$Source.rstk__iccontainer_div__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>rstk__pjproj__c</referenceTo>
        <relationshipLabel>Inventory Containers</relationshipLabel>
        <relationshipName>iccontainers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__iccontainer_porcptno__c</fullName>
        <inlineHelpText>Purchase Receipts that this Inventory Container is related to.</inlineHelpText>
        <label>PO Receipts</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__iccontainer_prefix__c</fullName>
        <inlineHelpText>The Prefix for this Inventory Container. User defined or as set by the Inventory Container Class.</inlineHelpText>
        <label>Inventory Container ID Prefix</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__iccontainer_projreqd__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>When checked, the Inventory Container is specific to the Project defined in the Project field.</inlineHelpText>
        <label>Container is Project Specific</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstk__iccontainer_site__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>The Site for all Items being stored in the Inventory Container. Mandatory if &apos;Container is Site Specific&apos; is checked. Values entered are information and used as defaults for transaction processing.</inlineHelpText>
        <label>Site</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>Site Division must match Division</errorMessage>
            <filterItems>
                <field>rstk__sysite__c.rstk__sysite_div__c</field>
                <operation>equals</operation>
                <valueField>$Source.rstk__iccontainer_div__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>rstk__sysite__c</referenceTo>
        <relationshipLabel>Inventory Containers</relationshipLabel>
        <relationshipName>iccontainers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__iccontainer_sitereqd__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>When checked, the Inventory Container is specific to the Site defined in the Site field.</inlineHelpText>
        <label>Container is Site Specific</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstk__iccontainer_splitreceiptqty__c</fullName>
        <inlineHelpText>Auto-assigned by system upon Purchase or Work Order split receipts</inlineHelpText>
        <label>Split Receipt Qty</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__iccontainer_totnetweight__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>System calculated weight of the contents (Inventory by Locations) within the Inventory Container.</inlineHelpText>
        <label>Total Container Net Weight</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__searchindex__c</fullName>
        <externalId>true</externalId>
        <label>Search Index</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__triggeroptions__c</fullName>
        <label>Trigger Options</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <label>Inventory Container</label>
    <listViews>
        <fullName>rstk__All</fullName>
        <columns>LAST_UPDATE</columns>
        <columns>NAME</columns>
        <columns>rstk__iccontainer_div__c</columns>
        <columns>rstk__iccontainer_continfostring__c</columns>
        <columns>rstk__iccontainer_origpoline__c</columns>
        <columns>rstk__iccontainer_origwo__c</columns>
        <columns>rstk__iccontainer_iccontainer__c</columns>
        <columns>rstk__iccontainer_id__c</columns>
        <columns>rstk__iccontainer_lpn__c</columns>
        <columns>rstk__iccontainer_earliestexpdate__c</columns>
        <columns>rstk__iccontainer_lpnorderdate__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>rstk__iccontainer_pjproj__c</columns>
        <filterScope>Everything</filterScope>
        <label>Inventory Containers</label>
    </listViews>
    <listViews>
        <fullName>rstk__RS_LPN_Inventory_Container</fullName>
        <columns>LAST_UPDATE</columns>
        <columns>NAME</columns>
        <columns>rstk__iccontainer_div__c</columns>
        <columns>rstk__iccontainer_continfostring__c</columns>
        <columns>rstk__iccontainer_origpoline__c</columns>
        <columns>rstk__iccontainer_origwo__c</columns>
        <columns>rstk__iccontainer_iccontainer__c</columns>
        <columns>rstk__iccontainer_earliestexpdate__c</columns>
        <columns>rstk__iccontainer_ncontents__c</columns>
        <filterScope>Everything</filterScope>
        <label>Inventory Container (LPN)</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Inventory Containers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>rstk__Validate_Container_Class_Div</fullName>
        <active>true</active>
        <description>Division must match Container Class Division</description>
        <errorConditionFormula>rstk__iccontainer_icconclass__r.rstk__icconclass_div__c !=  rstk__iccontainer_div__c</errorConditionFormula>
        <errorMessage>Division must match Container Class Division</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>rstk__Validate_Item_Required</fullName>
        <active>true</active>
        <description>&quot;Container is Item Specific&quot; must be set if Parent Container is Item Specific</description>
        <errorConditionFormula>rstk__iccontainer_itemreqd__c = false &amp;&amp; rstk__iccontainer_iccontainer__c != null &amp;&amp; rstk__iccontainer_iccontainer__r.rstk__iccontainer_itemreqd__c = true</errorConditionFormula>
        <errorMessage>&quot;Container is Item Specific&quot; must be set if Parent Container is Item Specific</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>rstk__Validate_Locid_Required</fullName>
        <active>true</active>
        <description>&quot;Container is Location ID Specific&quot; must be set if Parent Container is Location ID Specific</description>
        <errorConditionFormula>rstk__iccontainer_locidreqd__c = false &amp;&amp; rstk__iccontainer_iccontainer__c != null &amp;&amp; rstk__iccontainer_iccontainer__r.rstk__iccontainer_locidreqd__c = true</errorConditionFormula>
        <errorMessage>&quot;Container is Location ID Specific&quot; must be set if Parent Container is Location ID Specific</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>rstk__Validate_Locid_Sitereqd</fullName>
        <active>true</active>
        <description>&quot;Container is Location ID Specific&quot; cannot be set unless Container is Site Specific</description>
        <errorConditionFormula>rstk__iccontainer_locidreqd__c = true &amp;&amp; rstk__iccontainer_sitereqd__c = false</errorConditionFormula>
        <errorMessage>&quot;Container is Location ID Specific&quot; cannot be set unless Container is Site Specific</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>rstk__Validate_Locnum_Required</fullName>
        <active>true</active>
        <description>&quot;Container is Location Number Specific&quot; must be set if Parent Container is Location Number Specific</description>
        <errorConditionFormula>rstk__iccontainer_locnumreqd__c = false &amp;&amp; rstk__iccontainer_iccontainer__c != null &amp;&amp; rstk__iccontainer_iccontainer__r.rstk__iccontainer_locnumreqd__c = true</errorConditionFormula>
        <errorMessage>&quot;Container is Location Number Specific&quot; must be set if Parent Container is Location Number Specific</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>rstk__Validate_Max_Weight</fullName>
        <active>true</active>
        <description>Max Weight cannot be less than zero</description>
        <errorConditionFormula>rstk__iccontainer_maxweight__c &lt; 0</errorConditionFormula>
        <errorMessage>Max Weight cannot be less than zero</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>rstk__Validate_PJPROJ</fullName>
        <active>true</active>
        <description>Project cannot be specified unless &quot;Container is Project Specific&quot; is set</description>
        <errorConditionFormula>rstk__iccontainer_pjproj__c = null &amp;&amp;  rstk__iccontainer_projreqd__c = true</errorConditionFormula>
        <errorMessage>Project cannot be specified unless &quot;Container is Project Specific&quot; is set</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>rstk__Validate_Parent_Container_Div</fullName>
        <active>true</active>
        <description>Division must match Parent Container Division</description>
        <errorConditionFormula>rstk__iccontainer_iccontainer__c != null &amp;&amp; rstk__iccontainer_iccontainer__r.rstk__iccontainer_div__c !=  rstk__iccontainer_div__c</errorConditionFormula>
        <errorMessage>Division must match Parent Container Division</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>rstk__Validate_Proj_Required</fullName>
        <active>true</active>
        <description>&quot;Container is Project Specific&quot; must be set if Parent Container is Project Specific</description>
        <errorConditionFormula>rstk__iccontainer_projreqd__c = false &amp;&amp; rstk__iccontainer_iccontainer__c != null &amp;&amp; rstk__iccontainer_iccontainer__r.rstk__iccontainer_projreqd__c = true</errorConditionFormula>
        <errorMessage>&quot;Container is Project Specific&quot; must be set if Parent Container is Project Specific</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>rstk__Validate_Site_Required</fullName>
        <active>true</active>
        <description>&quot;Container is Site Specific&quot; must be set if Parent Container is Site Specific</description>
        <errorConditionFormula>rstk__iccontainer_sitereqd__c = false &amp;&amp; rstk__iccontainer_iccontainer__c != null &amp;&amp; rstk__iccontainer_iccontainer__r.rstk__iccontainer_sitereqd__c = true</errorConditionFormula>
        <errorMessage>&quot;Container is Site Specific&quot; must be set if Parent Container is Site Specific</errorMessage>
    </validationRules>
</CustomObject>